--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <h1 class="mt-3"><span class="about"> About</span> Me</h1>
 
       <video width="70%" controls class="mt-3" autoplay>
-        <source src="" type="video/mp4" />
+        <source src="/images/intro-website.MP4" type="video/mp4" />
       </video>
       <div class="cv m-5 p-5">
         <h3 class="text-start ms-5">Education</h3>
