--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/styles/portfolio.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -69,8 +69,10 @@
             <a class="nav-item nav-link" href="/projects.html"
               >Other Projects</a
             >
-            <a class="nav-item nav-link" href="#">Certificates</a>
-            <a class="nav-item nav-link" href="#">Gallery</a>
+            <a class="nav-item nav-link" href="certificates.html"
+              >Certificates</a
+            >
+            <a class="nav-item nav-link" href="gallery.html">Gallery</a>
             <a class="nav-item nav-link" href="#">Publications</a>
             <a class="nav-item nav-link" href="#">Contact Me</a>
           </div>
