--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/styles/portfolio.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -79,7 +79,7 @@
               >
             </li>
             <li>
-              <a class="nav-item nav-link" href="#">Gallery</a>
+              <a class="nav-item nav-link" href="gallery.html">Gallery</a>
             </li>
             <li>
               <a class="nav-item nav-link" href="#">Publications</a>
