--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <title>Portfolio-Home</title>
+    <title>Portfolio-Ahmad-Farkhondeh2024</title>
   </head>
   <body>
     <div class="container">
@@ -98,15 +98,15 @@
       </nav>
     </div>
 
-    <div class="about-me-wrapper text-center pt-1">
+    <div class="about-me-wrapper text-center pt-2 pb-3">
       <h1 class="mt-3"><span class="about"> About</span> Me</h1>
 
-      <video width="70%" controls class="mt-3" autoplay>
+      <video width="75%" controls class="mt-3" autoplay>
         <source src="/images/intro-website.MP4" type="video/mp4" />
       </video>
-      <div class="cv m-5 p-5">
-        <h3 class="text-start ms-5">Education</h3>
-        <p class="text-start ms-5">
+      <div class="cv m-5">
+        <h3 class="text-start">Education</h3>
+        <p class="text-start">
           <strong>M. A. in Industrial Design </strong>| 2020-2023
           <br />
 
@@ -123,7 +123,7 @@
           <br />
           ▪ Supervisor: Dr. Mehran Fateminia
         </p>
-        <p class="text-start ms-5 mt-3">
+        <p class="text-start mt-3">
           <strong> B. A. in Industrial Design</strong> | 2015-2020
           <br />
           ▪ Art University of Isfahan, Isfahan, Iran
@@ -139,9 +139,9 @@
           <br />
           ▪ Supervisor: Mr. Hasan Rezvan
         </p>
-        <h3 class="ms-5 mt-4">Research Interests</h3>
+        <h3 class="mt-4">Research Interests</h3>
 
-        <div class="text-start ms-5 me-5">
+        <div class="text-start">
           <div class="row">
             <div class="col-sm-6"><p>Social Design</p></div>
             <div class="col-sm-6"><p>Design Against crime</p></div>
