--- a/projects.html
+++ b/projects.html
@@ -69,12 +69,12 @@
               <a class="nav-item nav-link" href="/portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a class="nav-item nav-link" href="projects.html">
+              <a class="nav-item nav-link" href="/projects.html">
                 <strong>Other Projects</strong></a
               >
             </li>
             <li>
-              <a class="nav-item nav-link" href="certificates.html"
+              <a class="nav-item nav-link" href="/certificates.html"
                 >Certificates</a
               >
             </li>
@@ -154,36 +154,45 @@
             <div class="carousel-item active" data-bs-interval="10000">
               <img
                 src="images/Other-Projects/01-Orsey/04.jpg"
-                class="w-100 img"
+                class=""
                 alt="..."
+                width=70%
               />
             </div>
             <div class="carousel-item" data-bs-interval="2000">
               <img
                 src="images/Other-Projects/01-Orsey/02.jpg"
-                class="w-100"
+                class=""
                 alt="..."
+                width=70%
+
               />
             </div>
             <div class="carousel-item">
               <img
                 src="images/Other-Projects/01-Orsey/01.jpg"
-                class="w-100"
+                class=""
                 alt="..."
+                width=70%
+
               />
             </div>
             <div class="carousel-item">
               <img
                 src="images/Other-Projects/01-Orsey/03.jpg"
-                class="w-100"
+                class=""
                 alt="..."
+                width=70%
+
               />
             </div>
             <div class="carousel-item">
               <img
                 src="images/Other-Projects/01-Orsey/05.jpg"
-                class="w-100"
+                class=""
                 alt="..."
+                width=70%
+
               />
             </div>
           </div>
@@ -278,14 +287,14 @@
       </p>
       <div class="project-photos pb-5">
         <div
-          id="carouselExampleDark"
+          id="carouselExampleDarkness"
           class="carousel carousel-dark slide d-block"
           data-bs-ride="carousel"
         >
           <div class="carousel-indicators m-0">
             <button
               type="button"
-              data-bs-target="#carouselExampleDark"
+              data-bs-target="#carouselExampleDarkness"
               data-bs-slide-to="0"
               class="active"
               aria-current="true"
@@ -293,25 +302,25 @@
             ></button>
             <button
               type="button"
-              data-bs-target="#carouselExampleDark"
+              data-bs-target="#carouselExampleDarkness"
               data-bs-slide-to="1"
               aria-label="Slide 2"
             ></button>
             <button
               type="button"
-              data-bs-target="#carouselExampleDark"
+              data-bs-target="#carouselExampleDarkness"
               data-bs-slide-to="2"
               aria-label="Slide 3"
             ></button>
             <button
               type="button"
-              data-bs-target="#carouselExampleDark"
+              data-bs-target="#carouselExampleDarkness"
               data-bs-slide-to="3"
               aria-label="Slide 4"
             ></button>
             <button
               type="button"
-              data-bs-target="#carouselExampleDark"
+              data-bs-target="#carouselExampleDarkness"
               data-bs-slide-to="4"
               aria-label="Slide 5"
             ></button>
@@ -319,44 +328,54 @@
           <div class="carousel-inner mb-5">
             <div class="carousel-item active" data-bs-interval="10000">
               <img
-                src="images/Other-Projects/01-Orsey/04.jpg"
-                class="w-100 img"
+                src="images/Other-Projects/04-Packaging Project/01.jpg"
+                class=" "
                 alt="..."
+                width=70%
+
               />
             </div>
             <div class="carousel-item" data-bs-interval="2000">
               <img
-                src="images/Other-Projects/01-Orsey/02.jpg"
-                class="w-100"
+                src="images/Other-Projects/04-Packaging Project/02.jpg"
+                class=""
                 alt="..."
+                width=70%
+
               />
             </div>
             <div class="carousel-item">
               <img
-                src="images/Other-Projects/01-Orsey/01.jpg"
-                class="w-100"
+                src="images/Other-Projects/04-Packaging Project/03.jpg"
+                class=""
                 alt="..."
+                width=70%
+
               />
             </div>
             <div class="carousel-item">
               <img
-                src="images/Other-Projects/01-Orsey/03.jpg"
-                class="w-100"
+                src="images/Other-Projects/04-Packaging Project/04.jpg"
+                class=""
                 alt="..."
+                width=70%
+
               />
             </div>
             <div class="carousel-item">
               <img
-                src="images/Other-Projects/01-Orsey/05.jpg"
-                class="w-100"
+                src="images/Other-Projects/04-Packaging Project/05.jpg"
+                class=""
                 alt="..."
+                width=70%
+
               />
             </div>
           </div>
           <button
             class="carousel-control-prev"
             type="button"
-            data-bs-target="#carouselExampleDark"
+            data-bs-target="#carouselExampleDarkness"
             data-bs-slide="prev"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -365,7 +384,7 @@
           <button
             class="carousel-control-next"
             type="button"
-            data-bs-target="#carouselExampleDark"
+            data-bs-target="#carouselExampleDarkness"
             data-bs-slide="next"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -374,7 +393,7 @@
         </div>
       </div>
 
-      <h2 class="mt-5 mb-3">Dialux Project</h2>
+      <h2 class="mb-3">Dialux Project</h2>
       <p class="project-description mb-4">
         In the final project of Physics III (Electricity & Light), I designed
         suitable home lighting for both party and work modes using Dialux
