added first row pics

--- a/gallery.html
+++ b/gallery.html
@@ -98,6 +98,169 @@
       </nav>
     </div>
 
-    <div class="wrapper text-center mb-5 pt-1 pb-4"></div>
+    <div class="wrapper text-center mb-5 pt-4 pb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="images/gallery/1.My work (Aysu) was exhibited in the Design in Support of human wellbeing with regard to isolation and reduced social interactions exhibition at Isfahan city, Iran.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/1.My work (Aysu) was exhibited in the Design in Support of human wellbeing with regard to isolation and reduced social interactions exhibition at Isfahan city, Iran.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text">
+                  Aysu concept exhibited in the Design in Support of
+                  human-wellbeing exhibition in Isfahan
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="images/gallery/2.Multi-diciplinary teamwork experience.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/2.Multi-diciplinary teamwork experience.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">
+                  A multi-diciplinary teamwork experience
+                </h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="images/gallery/3.My work (Balancer) was exhibited in the Polish embassy in Iran.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/3.My work (Balancer) was exhibited in the Polish embassy in Iran.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">
+                  Balancer concept exhibited in the Polish embassy in Iran
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg">
+
+             <img
+                class="card-img-top shadow-sm p-1"
+                src="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg"
+                alt="Card image cap"
+              />
+               </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">
+                 “Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="images/gallery/1.My work (Aysu) was exhibited in the Design in Support of human wellbeing with regard to isolation and reduced social interactions exhibition at Isfahan city, Iran.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/1.My work (Aysu) was exhibited in the Design in Support of human wellbeing with regard to isolation and reduced social interactions exhibition at Isfahan city, Iran.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text">
+                  Aysu concept exhibited in the Design in Support of
+                  human-wellbeing exhibition in Isfahan
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="images/gallery/2.Multi-diciplinary teamwork experience.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/2.Multi-diciplinary teamwork experience.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">
+                  A multi-diciplinary teamwork experience
+                </h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="images/gallery/3.My work (Balancer) was exhibited in the Polish embassy in Iran.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/3.My work (Balancer) was exhibited in the Polish embassy in Iran.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">
+                  Balancer concept exhibited in the Polish embassy in Iran
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg">
+
+             <img
+                class="card-img-top shadow-sm p-1"
+                src="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg"
+                alt="Card image cap"
+              />
+               </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">
+                 “Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
