--- a/projects.html
+++ b/projects.html
@@ -152,48 +152,60 @@
           </div>
           <div class="carousel-inner mb-5">
             <div class="carousel-item active" data-bs-interval="10000">
-              <img
-                src="images/Other-Projects/01-Orsey/04.jpg"
-                class=""
-                alt="..."
-                width=70%
-              />
+              <a href="images/Other-Projects/01-Orsey/04.jpg">
+                <img
+                  src="images/Other-Projects/01-Orsey/04.jpg"
+                  class=""
+                  alt="..."
+                  width="70%"
+                />
+              </a>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-              <img
-                src="images/Other-Projects/01-Orsey/02.jpg"
-                class=""
-                alt="..."
-                width=70%
-
-              />
+              <a
+                href="images/Other-Projects/01-Orsey/02.jpg
+             "
+              >
+                <img
+                  src="images/Other-Projects/01-Orsey/02.jpg"
+                  class=""
+                  alt="..."
+                  width="70%"
+                />
+              </a>
             </div>
             <div class="carousel-item">
-              <img
-                src="images/Other-Projects/01-Orsey/01.jpg"
-                class=""
-                alt="..."
-                width=70%
-
-              />
+              <a
+                href="images/Other-Projects/01-Orsey/01.jpg
+              "
+              >
+                <img
+                  src="images/Other-Projects/01-Orsey/01.jpg"
+                  class=""
+                  alt="..."
+                  width="70%"
+                />
+              </a>
             </div>
             <div class="carousel-item">
-              <img
-                src="images/Other-Projects/01-Orsey/03.jpg"
-                class=""
-                alt="..."
-                width=70%
-
-              />
+              <a href="images/Other-Projects/01-Orsey/03.jpg">
+                <img
+                  src="images/Other-Projects/01-Orsey/03.jpg"
+                  class=""
+                  alt="..."
+                  width="70%"
+                />
+              </a>
             </div>
             <div class="carousel-item">
-              <img
-                src="images/Other-Projects/01-Orsey/05.jpg"
-                class=""
-                alt="..."
-                width=70%
-
-              />
+              <a href="images/Other-Projects/01-Orsey/05.jpg">
+                <img
+                  src="images/Other-Projects/01-Orsey/05.jpg"
+                  class=""
+                  alt="..."
+                  width="70%"
+                />
+              </a>
             </div>
           </div>
           <button
@@ -327,49 +339,57 @@
           </div>
           <div class="carousel-inner mb-5">
             <div class="carousel-item active" data-bs-interval="10000">
-              <img
-                src="images/Other-Projects/04-Packaging Project/01.jpg"
-                class=" "
-                alt="..."
-                width=70%
-
-              />
+              <a
+                href="/images/Other-Projects/04-Packaging Project/01.jpg
+             "
+              >
+                <img
+                  src="/images/Other-Projects/04-Packaging Project/01.jpg"
+                  class=" "
+                  alt="..."
+                  width="70%"
+                />
+              </a>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-              <img
-                src="images/Other-Projects/04-Packaging Project/02.jpg"
-                class=""
-                alt="..."
-                width=70%
-
-              />
+              <a href="/images/Other-Projects/04-Packaging Project/02.jpg">
+                <img
+                  src="/images/Other-Projects/04-Packaging Project/02.jpg"
+                  class=""
+                  alt="..."
+                  width="70%"
+                />
+              </a>
             </div>
             <div class="carousel-item">
-              <img
-                src="images/Other-Projects/04-Packaging Project/03.jpg"
-                class=""
-                alt="..."
-                width=70%
-
-              />
+              <a href="/images/Other-Projects/04-Packaging Project/03.jpg">
+                <img
+                  src="/images/Other-Projects/04-Packaging Project/03.jpg"
+                  class=""
+                  alt="..."
+                  width="70%"
+                />
+              </a>
             </div>
             <div class="carousel-item">
-              <img
-                src="images/Other-Projects/04-Packaging Project/04.jpg"
-                class=""
-                alt="..."
-                width=70%
-
-              />
+              <a href="/images/Other-Projects/04-Packaging Project/04.jpg">
+                <img
+                  src="/images/Other-Projects/04-Packaging Project/04.jpg"
+                  class=""
+                  alt="..."
+                  width="70%"
+                />
+              </a>
             </div>
             <div class="carousel-item">
-              <img
-                src="images/Other-Projects/04-Packaging Project/05.jpg"
-                class=""
-                alt="..."
-                width=70%
-
-              />
+              <a href="images/Other-Projects/04-Packaging Project/05.jpg">
+                <img
+                  src="/images/Other-Projects/04-Packaging Project/05.jpg"
+                  class=""
+                  alt="..."
+                  width="70%"
+                />
+              </a>
             </div>
           </div>
           <button
