publication and contact me html were added

--- a/gallery.html
+++ b/gallery.html
@@ -162,18 +162,19 @@
           </div>
           <div class="col-md-3">
             <div class="card m-3" style="width: 16rem">
-              <a href="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg">
-
-             <img
-                class="card-img-top shadow-sm p-1"
-                src="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg"
-                alt="Card image cap"
-              />
-               </a>
+              <a
+                href="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg"
+                  alt="Card image cap"
+                />
+              </a>
 
               <div class="card-body">
                 <h4 class="card-text mb-3">
-                 “Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg
+                  “Trails of Hope. The Odyssey of Freedom” exhibition in Iran
                 </h4>
               </div>
             </div>
@@ -184,77 +185,72 @@
         <div class="row">
           <div class="col-md-3">
             <div class="card m-3" style="width: 16rem">
+              <a href="images/gallery/5.Library.jpg">
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/5.Library.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">
+                  Studying at the library for master's entrance exam
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
               <a
-                href="images/gallery/1.My work (Aysu) was exhibited in the Design in Support of human wellbeing with regard to isolation and reduced social interactions exhibition at Isfahan city, Iran.jpg"
+                href="images/gallery/6.The graduation ceremony for Bachelor's degree, Art University of Isfahan, Isfahan, Iran.jpg"
               >
                 <img
                   class="card-img-top shadow-sm p-1"
-                  src="/images/gallery/1.My work (Aysu) was exhibited in the Design in Support of human wellbeing with regard to isolation and reduced social interactions exhibition at Isfahan city, Iran.jpg"
+                  src="images/gallery/6.The graduation ceremony for Bachelor's degree, Art University of Isfahan, Isfahan, Iran.jpg"
                   alt="Card image cap"
                 />
               </a>
 
               <div class="card-body">
                 <h4 class="card-text">
-                  Aysu concept exhibited in the Design in Support of
-                  human-wellbeing exhibition in Isfahan
+                  Graduation ceremony for Bachelor's degree, Art University of
+                  Isfahan, Isfahan, Iran
                 </h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="images/gallery/7.co-working office.jpg">
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/7.co-working office.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body mb-3">
+                <h4 class="card-text mb-3">Co-working office</h4>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="card m-3" style="width: 16rem">
               <a
-                href="images/gallery/2.Multi-diciplinary teamwork experience.jpg"
+                href="images/gallery/8.Ranked second in the fashion design competition, Isfahan, Iran.jpg"
               >
                 <img
                   class="card-img-top shadow-sm p-1"
-                  src="images/gallery/2.Multi-diciplinary teamwork experience.jpg"
+                  src="images/gallery/8.Ranked second in the fashion design competition, Isfahan, Iran.jpg"
                   alt="Card image cap"
                 />
               </a>
 
               <div class="card-body">
                 <h4 class="card-text mb-3">
-                  A multi-diciplinary teamwork experience
-                </h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="card m-3" style="width: 16rem">
-              <a
-                href="images/gallery/3.My work (Balancer) was exhibited in the Polish embassy in Iran.jpg"
-              >
-                <img
-                  class="card-img-top shadow-sm p-1"
-                  src="images/gallery/3.My work (Balancer) was exhibited in the Polish embassy in Iran.jpg"
-                  alt="Card image cap"
-                />
-              </a>
-
-              <div class="card-body">
-                <h4 class="card-text mb-3">
-                  Balancer concept exhibited in the Polish embassy in Iran
-                </h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card m-3" style="width: 16rem">
-              <a href="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg">
-
-             <img
-                class="card-img-top shadow-sm p-1"
-                src="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg"
-                alt="Card image cap"
-              />
-               </a>
-
-              <div class="card-body">
-                <h4 class="card-text mb-3">
-                 “Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg
+                  Rank second in the fashion design competition, Isfahan
                 </h4>
               </div>
             </div>
