--- a/index.html
+++ b/index.html
@@ -79,19 +79,15 @@
               >
             </li>
             <li>
-              <a class="nav-item nav-link" href="#">Gallery</a>
+              <a class="nav-item nav-link" href="/gallery.html">Gallery</a>
             </li>
             <li>
-              <a class="nav-item nav-link" href="#">Publications</a>
-            </li>
-            <li>
-              <a
-                class="nav-item nav-link disabled"
-                href="#"
-                tabindex="-1"
-                aria-disabled="true"
-                >Contact Me</a
+              <a class="nav-item nav-link" href="/publications.html"
+                >Publications</a
               >
+            </li>
+            <li>
+              <a class="nav-item nav-link" href="/contactme.html">Contact Me</a>
             </li>
           </div>
         </div>
