added all gallery pics

--- a/gallery.html
+++ b/gallery.html
@@ -75,11 +75,13 @@
             </li>
             <li>
               <a class="nav-item nav-link" href="certificates.html"
-                ><strong>Certificates</strong></a
+                >Certificates</a
               >
             </li>
             <li>
-              <a class="nav-item nav-link" href="gallery.html">Gallery</a>
+              <a class="nav-item nav-link" href="gallery.html">
+                <strong>Gallery</strong></a
+              >
             </li>
             <li>
               <a class="nav-item nav-link" href="#">Publications</a>
@@ -180,8 +182,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="container">
         <div class="row">
           <div class="col-md-3">
             <div class="card m-3" style="width: 16rem">
@@ -252,6 +252,301 @@
                 <h4 class="card-text mb-3">
                   Rank second in the fashion design competition, Isfahan
                 </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="images/gallery/9.Sustainability Jam workshop.JPG">
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/9.Sustainability Jam workshop.JPG"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-4">Sustainability Jam workshop</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="images/gallery/10.Weekly meeting of sports association in Isfahan Art University, Isfahan, Iran.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/10.Weekly meeting of sports association in Isfahan Art University, Isfahan, Iran.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text">
+                  Weekly meeting of sports association in Isfahan Art
+                  University, Iran
+                </h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="/images/gallery/11.Digital painting workshop.jpg">
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/11.Digital painting workshop.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body mb-3">
+                <h4 class="card-text mb-3">Digital painting workshop</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="/images/gallery/13.Isfahan Art University Sports Association camp, Isfahan, Iran.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/13.Isfahan Art University Sports Association camp, Isfahan, Iran.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">
+                  Isfahan Art University Sports Association camp, Iran
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="images/gallery/12.Do Smart Workshop 2022.jpg">
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/12.Do Smart Workshop 2022.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-4">Do Smart Workshop 2022</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="/images/gallery/17.Sculpture workshop.jpg">
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/17.Sculpture workshop.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">Sculpture workshop</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="/images/gallery/15.Ranked first in the ping pong tournament at Art University of Isfahan, Isfahan, Iran 2017.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/15.Ranked first in the ping pong tournament at Art University of Isfahan, Isfahan, Iran 2017.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text">
+                  Rank first in the ping pong tournament at Art University of
+                  Isfahan, Iran 2017
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="images/gallery/16.Ranked first in the ping pong tournament at Art University of Isfahan, Isfahan, Iran 2016.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/16.Ranked first in the ping pong tournament at Art University of Isfahan, Isfahan, Iran 2016.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text">
+                  Ranke first in the ping pong tournament at Art University of
+                  Isfahan, Iran 2016
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="/images/gallery/14.Metalworking.jpg">
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/14.Metalworking.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body mb-2">
+                <h4 class="card-text mb-4">Metalworking</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="/images/gallery/18.Working with polyester resin and types of putty.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/18.Working with polyester resin and types of putty.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text">
+                  Working with polyester resin and types of putty
+                </h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="/images/gallery/19.Woodworking workshop.jpg ">
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/19.Woodworking workshop.jpg "
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">Woodworking workshop</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="images/gallery/20.Playing Billiard.jpg">
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/20.Playing Billiard.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">Playing Billiard</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="/images/gallery/23.2rd professional meeting and national competition, the role of industrial design in handicrafts.jpg "
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/23.2rd professional meeting and national competition, the role of industrial design in handicrafts.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text">
+                  2rd professional meeting and national competition, the role of
+                  industrial design in handicrafts
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="/images/gallery/22.3rd professional meeting and national competition, the role of industrial design in handicrafts.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/22.3rd professional meeting and national competition, the role of industrial design in handicrafts.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text">
+                  3rd professional meeting and national competition, the role of
+                  industrial design in handicrafts
+                </h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a
+                href="/images/gallery/21.My trip with my friends to the south coast of Iran.jpg"
+              >
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="/images/gallery/21.My trip with my friends to the south coast of Iran.jpg"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3">
+                  My trip to the south coast of Iran with my friends
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card m-3" style="width: 16rem">
+              <a href="images/gallery/">
+                <img
+                  class="card-img-top shadow-sm p-1"
+                  src="images/gallery/"
+                  alt="Card image cap"
+                />
+              </a>
+
+              <div class="card-body">
+                <h4 class="card-text mb-3"></h4>
               </div>
             </div>
           </div>
