--- a/gallery.html
+++ b/gallery.html
@@ -74,17 +74,19 @@
               >
             </li>
             <li>
-              <a class="nav-item nav-link" href="certificates.html"
+              <a class="nav-item nav-link" href="/certificates.html"
                 >Certificates</a
               >
             </li>
             <li>
-              <a class="nav-item nav-link" href="gallery.html">
+              <a class="nav-item nav-link" href="/gallery.html">
                 <strong>Gallery</strong></a
               >
             </li>
             <li>
-              <a class="nav-item nav-link" href="#">Publications</a>
+              <a class="nav-item nav-link" href="/publications.html"
+                >Publications</a
+              >
             </li>
             <li>
               <a
